# winget-types

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
src/installer/: apps_and_features_entry.rs  architecture.rs  channel.rs  command.rs  elevation_requirement.rs  expected_return_codes.rs  file_extension.rs  install_modes.rs  installation_metadata.rs  installer_return_code.rs  installer_type.rs  minimum_os_version.rs  mod.rs  platform.rs  protocol.rs  repair_behavior.rs  return_response.rs  scope.rs  unsupported_arguments.rs  unsupported_os_architectures.rs  upgrade_behavior.rs
src/installer/apps_and_features_entries/: apps_and_features_entry.rs  mod.rs
src/installer/authentication/: authentication_type.rs  mod.rs
src/installer/authentication/info/: mod.rs  resource.rs  scope.rs
src/installer/capability/: mod.rs  restricted.rs
src/installer/dependencies/: mod.rs  package.rs
src/installer/market/: markets.rs  mod.rs
src/installer/nested/: installer_files.rs  installer_type.rs  mod.rs  portable_command_alias.rs
src/installer/switches/: custom.rs  install_location.rs  interactive.rs  log.rs  mod.rs  repair.rs  silent.rs  silent_with_progress.rs  switch.rs  upgrade.rs
src/locale/: agreement.rs  author.rs  copyright.rs  description.rs  installation_notes.rs  license.rs  mod.rs  moniker.rs  package_name.rs  publisher.rs  release_notes.rs  short_description.rs  tag.rs
src/locale/documentation/: label.rs  mod.rs
src/locale/icon/: file_type.rs  mod.rs  resolution.rs  theme.rs
src/shared/: generic.rs  language_tag.rs  manifest.rs  manifest_type.rs  manifest_version.rs  mod.rs  package_identifier.rs  package_version.rs  sha_256.rs
src/shared/url/: copyright_url.rs  license_url.rs  mod.rs  package_url.rs  publisher_support_url.rs  publisher_url.rs  release_notes_url.rs
src/shared/version/: mod.rs  part.rs
src/version/: mod.rs
