[package]
name = "winget-types"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "WinGet Types"
repository = "https://github.com/russellbanks/winget-types"
license = "MIT OR Apache-2.0"
keywords = ["winget"]
categories = ["api-bindings", "no-std"]

[dependencies]
base16ct = { version = "0.2", default-features = false }
bitflags = { version = "2", default-features = false }
camino = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false }
compact_str = { version = "0.9", default-features = false }
heapless = { version = "0.8", default-features = false }
icu_locid = { version = "1", default-features = false }
itertools = { version = "0.14", default-features = false }
package-family-name = { version = "2", default-features = false }
percent-encoding = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
sha2 = { version = "0.10", default-features = false }
smallvec = { version = "1", default-features = false, features = ["union"] }
thiserror = { version = "2", default-features = false }
url = { version = "2", default-features = false }

[features]
std = ["icu_locid/std"]
serde = [
    "dep:serde",
    "camino/serde1",
    "chrono/serde",
    "compact_str/serde",
    "heapless/serde",
    "icu_locid/serde",
    "package-family-name/serde",
    "url/serde"
]

[dev-dependencies]
indoc = "2"
rstest = "0.25"
rustc-hash = { version = "2", default-features = false }
serde_yaml = "0.9"
